--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,23 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+    <style name="AppTextAppearance">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily"> sans-serif </item>
+    </style>
+
+    <style name="nav_text_appearance" parent="AppTextAppearance">
+        <item name="android:textSize"> @dimen/nav_text_size </item>
+    </style>
+
 </resources>
