--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,9 @@
         <item name="android:textSize"> @dimen/nav_text_size </item>
     </style>
 
+    <style name="toolbar_title_text_appearance" parent="AppTextAppearance">
+        <item name="android:textSize"> @dimen/toolbar_title_text_size </item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
