--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,29 +4,29 @@
     <group android:id="@+id/base_items">
         <item
             android:id="@+id/nav_item_home"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
 
         <item
             android:id="@+id/nav_item_your_music"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/ic_menu_music"
             android:title="@string/menu_your_music" />
 
         <item
             android:id="@+id/nav_playlist"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/ic_menu_playlist"
             android:title="@string/menu_playlist" />
     </group>
 
     <group android:id="@+id/other_items">
         <item
             android:id="@+id/nav_item_about"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/ic_menu_about"
             android:title="@string/menu_about" />
 
         <item
             android:id="@+id/nav_item_logout"
-            android:icon="@android:drawable/ic_menu_agenda"
+            android:icon="@drawable/ic_menu_logout"
             android:title="@string/menu_item_logout" />
     </group>
 
