--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,9 @@
     <dimen name="activity_vertical_margin">8dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">80dp</dimen>
+    <dimen name="toolbar_height">58dp</dimen>
 
 
-    <dimen name="nav_text_size">14sp</dimen>
+    <dimen name="nav_text_size">13sp</dimen>
     <dimen name="toolbar_title_text_size">16sp</dimen>
 </resources>
