--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
 
     <style name="nav_text_appearance" parent="AppTextAppearance">
         <item name="android:textSize"> @dimen/nav_text_size </item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="toolbar_title_text_appearance" parent="AppTextAppearance">
