--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+        <variable name="hasUserProfilePhoto" type="Boolean"/>
+        <variable name="profilePhotoUrl" type="String"/>
+        <import type="android.view.View"/>
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -17,7 +23,7 @@
             android:id="@+id/nav_non_profile_img_rl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="@{hasUserProfilePhoto ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -28,6 +34,7 @@
                 android:layout_height="54dp"
                 android:background="@drawable/bg_circular_shape"
                 android:gravity="center"
+                android:text="@{profilePhotoUrl}"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
                 android:textSize="18sp"/>
@@ -39,7 +46,7 @@
             android:layout_width="54dp"
             android:layout_height="54dp"
             android:src="@drawable/ic_base_icon"
-            android:visibility="gone"
+            android:visibility="@{hasUserProfilePhoto ? View.VISIBLE : View.GONE}"
             app:civ_border_color="@color/white"
             app:civ_border_width="2dp"
             app:layout_constraintEnd_toEndOf="parent"
