--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,11 +4,15 @@
     <data>
         <variable name="hasUserProfilePhoto" type="Boolean"/>
         <variable name="profilePhotoUrl" type="String"/>
+        <variable
+            name="navBarCallback"
+            type="com.example.singmetoo.appSingMe2.mBase.interfaces.NavigationDrawerInterface" />
         <import type="android.view.View"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/user_profile_cl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -17,6 +21,7 @@
         android:orientation="vertical"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:onClick="@{navBarCallback::onProfileClick}"
         android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
         <RelativeLayout
