--- a/app/src/main/res/layout/layout_home_fragment.xml
+++ b/app/src/main/res/layout/layout_home_fragment.xml
@@ -65,6 +65,7 @@
                     android:layout_height="28dp"
                     android:layout_marginEnd="16dp"
                     app:profileImageUrl="@{userInfo.userProfilePicUrl}"
+                    app:errorImage="@{@drawable/ic_base_icon}"
                     app:civ_border_width="1dp"
                     android:visibility="gone"
                     app:civ_border_color="@color/white"
@@ -83,27 +84,6 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/home_frag_toolbar">
-
-            <EditText
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@={userInfo.userName}"
-                android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ClickMe"
-                android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
