--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
 
     <dimen name="nav_text_size">13sp</dimen>
     <dimen name="toolbar_title_text_size">16sp</dimen>
+    <dimen name="item_spacing_top">56dp</dimen>
+    <dimen name="item_spacing_left">12dp</dimen>
 </resources>
