--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -35,7 +36,7 @@
     <style name="toolbar_title_text_appearance" parent="AppTextAppearance">
         <item name="android:textSize"> @dimen/toolbar_title_text_size </item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginTop">4dp</item>
     </style>
 
 </resources>
