--- a/app/src/main/res/layout/layout_music_library_fragment.xml
+++ b/app/src/main/res/layout/layout_music_library_fragment.xml
@@ -38,11 +38,12 @@
 
                 <ImageView
                     android:id="@+id/toolbar_home_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:src="@drawable/ic_menu_home"
                     android:tint="@color/white"
-                    android:layout_marginEnd="16dp"
+                    android:padding="10dp"
+                    android:layout_marginEnd="6dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent">
