--- a/app/src/main/res/layout/layout_music_library_fragment.xml
+++ b/app/src/main/res/layout/layout_music_library_fragment.xml
@@ -11,7 +11,7 @@
             android:id="@+id/default_playing_song_fl"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/playing_song_rv"
+            app:layout_constraintBottom_toBottomOf="@+id/playing_song_rl"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -85,15 +85,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/music_lib_frag_toolbar" />
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/song_control_barrier"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="music_lib_frag_toolbar,toolbar_subtitle" />
-
         <RelativeLayout
-            android:id="@+id/playing_song_rv"
+            android:id="@+id/playing_song_rl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -110,7 +103,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:constraint_referenced_ids="toolbar_subtitle,playing_song_rv,default_playing_song_fl" />
+            app:constraint_referenced_ids="toolbar_subtitle,playing_song_rl,default_playing_song_fl" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/songs_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/songs_rv_barrier"
+            />
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/song_control_barrier"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="music_lib_frag_toolbar,toolbar_subtitle" />
+
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/songs_rv_barrier"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="music_lib_frag_toolbar,playing_song_rl" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
