--- a/app/src/main/res/layout/layout_music_library_fragment.xml
+++ b/app/src/main/res/layout/layout_music_library_fragment.xml
@@ -109,7 +109,7 @@
             android:id="@+id/songs_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/song_item_spacing_top"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/songs_rv_barrier"
