--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="nav_header_height">80dp</dimen>
     <dimen name="playing_header_height">164dp</dimen>
     <dimen name="toolbar_height">58dp</dimen>
+    <dimen name="base_margin_horizontal">16dp</dimen>
 
 
     <dimen name="nav_text_size">13sp</dimen>
@@ -13,5 +14,9 @@
     <dimen name="toolbar_subtitle_text_size">12sp</dimen>
     <dimen name="item_spacing_top">56dp</dimen>
     <dimen name="item_spacing_left">12dp</dimen>
-    <dimen name="song_item_spacing_top">4dp</dimen>
+    <dimen name="song_item_spacing_top">8dp</dimen>
+    <dimen name="song_item_title_text_size">13sp</dimen>
+    <dimen name="song_item_artist_text_size">11sp</dimen>
+    <dimen name="song_item_card_margin">8dp</dimen>
+    <dimen name="song_item_card_height">64dp</dimen>
 </resources>
