--- a/app/src/main/res/layout/layout_song_item.xml
+++ b/app/src/main/res/layout/layout_song_item.xml
@@ -16,9 +16,11 @@
         android:layout_marginEnd="@dimen/song_item_card_margin"
         app:cardBackgroundColor="@color/song_item_card_bg_color"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_view_cl"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -30,8 +32,7 @@
                 android:tint="@color/song_item_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_play_circle_48dp" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/song_title_tv"
@@ -60,7 +61,7 @@
                 android:fontFamily="sans-serif"
                 android:singleLine="true"
                 android:text="@{songItem.songArtist}"
-                android:textColor="@color/song_item_color"
+                android:textColor="@color/song_item_artist_text_color"
                 android:textSize="@dimen/song_item_artist_text_size"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -68,15 +69,13 @@
                 app:layout_constraintStart_toEndOf="@+id/song_play_iv"
                 app:layout_constraintTop_toBottomOf="@+id/song_title_tv" />
 
-            <TextView
+            <ImageView
                 android:id="@+id/song_duration_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/base_margin_horizontal"
-                android:fontFamily="sans-serif"
-                android:text="4:15"
-                android:textColor="@color/song_item_color"
-                android:textSize="@dimen/song_item_artist_text_size"
+                android:padding="4dp"
+                android:layout_marginEnd="12dp"
+                app:srcCompat="@drawable/ic_three_dot"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
