--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="bg_gradient_start_color">#4687A5</color>
     <color name="bg_gradient_end_color">#195671</color>
     <color name="navigation_view_color">#DCD9D5</color>
-    <color name="song_item_color">#000</color>
-    <color name="song_item_card_bg_color">#ECE8E8</color>
+    <color name="song_item_color">@color/white</color>
+    <color name="song_item_card_bg_color">@android:color/transparent</color>
+    <color name="song_item_artist_text_color">#BFBBBB</color>
 </resources>
