--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="song_item_color">@color/white</color>
     <color name="song_item_card_bg_color">@android:color/transparent</color>
     <color name="song_item_artist_text_color">#BFBBBB</color>
+    <color name="bg_song_item_playing">#7E6130</color>
 </resources>
