--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -9,6 +9,9 @@
 
         <include layout="@layout/main_content_layout" />
 
+        <include android:id="@+id/include_audio_player_layout"
+            layout="@layout/bottom_audio_player" />
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
