--- a/app/src/main/res/layout/layout_music_library_fragment.xml
+++ b/app/src/main/res/layout/layout_music_library_fragment.xml
@@ -90,6 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
+            android:padding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/song_control_barrier">
