--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="color_buffered">#1F5F46F4</color>
     <color name="color_unplayed">#FFBEBEBE</color>
     <color name="bg_player">#434343</color>
+    <color name="bg_audio_player_preview">#454C75</color>
 </resources>
