--- a/app/src/main/res/layout/layout_song_item.xml
+++ b/app/src/main/res/layout/layout_song_item.xml
@@ -24,12 +24,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/song_play_iv"
-                android:layout_width="wrap_content"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/song_iv"
+                android:layout_width="36dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_horizontal"
-                android:tint="@color/song_item_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
@@ -48,7 +47,7 @@
                 android:textSize="@dimen/song_item_title_text_size"
                 app:layout_constraintBottom_toTopOf="@+id/song_artist_tv"
                 app:layout_constraintEnd_toStartOf="@+id/song_duration_tv"
-                app:layout_constraintStart_toEndOf="@+id/song_play_iv"
+                app:layout_constraintStart_toEndOf="@+id/song_iv"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -66,7 +65,7 @@
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/song_duration_tv"
-                app:layout_constraintStart_toEndOf="@+id/song_play_iv"
+                app:layout_constraintStart_toEndOf="@+id/song_iv"
                 app:layout_constraintTop_toBottomOf="@+id/song_title_tv" />
 
             <ImageView
