--- a/app/src/main/res/layout/bottom_audio_player.xml
+++ b/app/src/main/res/layout/bottom_audio_player.xml
@@ -19,12 +19,10 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/exo_player_view">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/audio_player_preview_iv"
-                android:layout_width="36dp"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@drawable/bg_default_playing_song"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
