--- a/app/src/main/res/layout/layout_song_item.xml
+++ b/app/src/main/res/layout/layout_song_item.xml
@@ -24,10 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/song_iv"
-                android:layout_width="36dp"
-                android:layout_height="wrap_content"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
                 android:layout_marginStart="@dimen/base_margin_horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
